--- a/FalmatazClothing/FalmatazClothing.csproj
+++ b/FalmatazClothing/FalmatazClothing.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
