--- a/FalmatazClothing/FalmatazClothing.csproj
+++ b/FalmatazClothing/FalmatazClothing.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Models\DTO\CartItem\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
